# mongoengine-softdelete

./: .gitignore  LICENCE.txt  Makefile  README.md  pyproject.toml
.circleci/: config.yml
mongoengine_softdelete/: document.py  queryset.py  signals.py
tests/: base.py  test_composited_query_key.py  test_enum_field.py  test_mongoengine_softdelete.py  test_nested_sub_key_queries.py  test_softdelete_cache.py  test_softdelete_nocache.py  test_subkey_queries.py
tests/models/: icecream.py  nested.py  photoalbum.py  softcream.py
