[tool.poetry]
name = "mongoengine-softdelete"
version = "0.0.6"
description = "Soft delete for MongoEngine"
maintainers = [
    "Benjamin Hirschfield <benjamin.hirschfield@dolead.com>",
    "Dolead <networks@dolead.com>" ]
authors = ["Benjamin Hirschfield <benjamin.hirschfield@dolead.com>"]
readme = "README.md"
repository = "https://github.com/dolead/mongoengine-softdelete"
documentation = ""
license = "MIT"
classifiers = [
          "Programming Language :: Python :: 3",
          "License :: OSI Approved :: MIT License"]
keywords = [ "mongoengine", "soft", "delete" ]

[tool.poetry.dependencies]
python = "^3.7"
pymongo = ">=3.6.1"
mongoengine = ">=0.16.3"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.7.0"
mypy = "^0.812"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
pytest-html = "^3.1.1"
coverage = "^5.5"
codacy-coverage = "^1.3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
